fixed all three tools to launch binaries from $tool/dist.
Moved documentation around (removed/added is really just mving)

Will probably have to fix the Beta tagging of dicetool jws

--- a/web/src/rptools.css
+++ b/web/src/rptools.css
@@ -47,4 +47,5 @@ TD#backgrounded {
 }
 A:link, A:active, A:visited { color: blue; text-decoration: none; }
 A:hover { text-decoration: underline; }
-
+IMG:screenshot { align: top; }
+BR:clear { clear: left; }
